ingress-migration/legacy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legacy
  labels:
    gateway-access: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy
  namespace: legacy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: legacy
      version: v1
  template:
    metadata:
      labels:
        app: legacy
        version: v1
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.19
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: legacy
  namespace: legacy
spec:
  selector:
    app: legacy
    version: v1
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-checkout
  namespace: legacy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: legacy
      version: checkout
  template:
    metadata:
      labels:
        app: legacy
        version: checkout
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.19
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: legacy-checkout
  namespace: legacy
spec:
  selector:
    app: legacy
    version: checkout
  ports:
  - port: 8080
    targetPort: 8080
