ingress-migration/gw-internal.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: internal-http
  namespace: infra
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: legacy.example.com
    protocol: HTTPS
    port: 443
    hostname: store.example.com
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: "true"    
    tls:
      mode: Terminate
      certificateRefs:
      - name: legacy-example-com
  - name: legacy.agilework.info
    protocol: HTTPS
    port: 443
    hostname: legacy.agilework.info
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: "true"    
    tls:
      mode: Terminate
      certificateRefs:
      - name: legacy-agilework-info
  addresses:
  - type: NamedAddress
    value: legacy-gw-address
