ingress-migration/legacy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: legacy-ingress-address
    kubernetes.io/ingress.class: "gce-internal"
  name: legacy-ingress
  namespace: legacy
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: legacy
            port:
              number: 8080
  tls:
  - secretName: legacy.example.com
  - secretName: legacy.agilework.info
